@@ -1,6 +1,6 @@
 Package: gap
 Version: 1.2.2
-Date: 2019-9-2
+Date: 2019-10-7
 Title: Genetic Analysis Package
 Author: Jing Hua Zhao and colleagues with inputs from Kurt Hornik and
         Brian Ripley
