@@ -59,6 +59,7 @@ cnvplot                 genomewide plot of CNVs
 METAL_forestplot        forest plot as R/meta's forest for METAL outputs
 mhtplot                 Manhattan plot
 mhtplot2                Manhattan plot with annotations
+mhtplot2d               2D Manhattan plot
 mhtplot.trunc           truncated Manhattan plot
 miamiplot               Miamiplot (Experimental)
 pedtodot                Converting pedigree(s) to dot file(s)
